Closed Bug 209359 Opened 22 years ago Closed 22 years ago

HRs cause wrong style context parent warnings

Categories

(Core :: CSS Parsing and Computation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.5alpha

People

(Reporter: dbaron, Assigned: dbaron)

Details

(Whiteboard: [patch])

Attachments

(3 files, 2 obsolete files)

HRs cause wrong style context parent warnings thanks to the fix for bug 141054. (My testcase was a mail message, but anyway.) The patch I'm about to attach fixes those warnings. It also moves some code around since Bernd put an unrelated function in the middle of some related ones (which I reviewed), and also fixes the final "tail call" to be true recursion, since the placeholder's parent could be NS_FRAME_IS_SPECIAL.
Attachment #125615 - Flags: superreview?(bz-bugspam)
Attachment #125615 - Flags: review?(bz-bugspam)
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [patch]
Target Milestone: --- → mozilla1.5alpha
Attached patch patchSplinter Review
Oops, forgot about next-in-flows. If you think of a better name for |GetNextSiblingHarder|, let me know.
Attachment #125615 - Attachment is obsolete: true
Attachment #125615 - Flags: superreview?(bz-bugspam)
Attachment #125615 - Flags: review?(bz-bugspam)
Attachment #125623 - Flags: superreview?(bz-bugspam)
Attachment #125623 - Flags: review?(bz-bugspam)
Comment on attachment 125623 [details] [diff] [review] patch r+sr=me. You suggested GetNextSiblingAcrossLines instead of GetNextSiblingHarder; that would be much better, yes. ;)
Attachment #125623 - Flags: superreview?(bzbarsky)
Attachment #125623 - Flags: superreview+
Attachment #125623 - Flags: review?(bzbarsky)
Attachment #125623 - Flags: review+
Attached patch additional patch (obsolete) — Splinter Review
Actually, the :before itself could be split...
Attached patch additional patchSplinter Review
better version
Attachment #125668 - Attachment is obsolete: true
Attachment #125669 - Flags: superreview+
Attachment #125669 - Flags: review+
Fix checked in to trunk, 2003-06-14 17:55/18:24 -0700.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: