Fix wrong parent style context warnings (and incorrect reresolution) with HRs or other leaf frames with :before or :after generated content.  Move some code back together that was separated.  Also fix case of float whose placeholder is the child of a block within an inline.  b=209359  r+sr=bzbarsky