layout/html/base/src/nsFrame.h
@@ -369,14 +369,11 @@ public:
   // Do the work for getting the parent style context frame so that
   // other frame's |GetParentStyleContextFrame| methods can call this
   // method on *another* frame.  (This function handles out-of-flow
-  // frames by using the frame manager's placeholder map and it handles
-  // block-within-inline by calling |GetIBSpecialParent|.)
+  // frames by using the frame manager's placeholder map and it also
+  // handles block-within-inline and generated content wrappers.)
   nsresult DoGetParentStyleContextFrame(nsIPresContext* aPresContext,
                                         nsIFrame**      aProviderFrame,
                                         PRBool*         aIsChild);
-
-  nsresult GetIBSpecialParent(nsIPresContext* aPresContext,
-                              nsIFrame** aSpecialParent);
 
   // Return the previously stored overflow area, if the frame does not 
   // overflow and a creation is not requested it will return nsnull
